--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
       <!-- Wizard -->
       <div id="wizard">
         <!-- Step 1 -->
-        <div class="step active">
-          <h2>Step 1: Enter Monthly Income</h2>
-          <input type="number" id="income-input" placeholder="Enter income">
-          <div class="nav-buttons">
-            <button onclick="nextStep()">Next ➡️</button>
-          </div>
-        </div>
+      <!-- Step 1 -->
+<div class="step active">
+  <h2>Step 1: Enter Monthly Income</h2>
+  <input type="number" id="income-input" placeholder="Enter income">
+  <div class="nav-buttons">
+    <button onclick="setIncome(); nextStep()">Next ➡️</button>
+  </div>
+</div>
+
 
         <!-- Step 2 -->
         <div class="step">
